# Cell-Offset-Generator

./: .gitmodules
Fallout 4/: .gitignore  CMakeLists.txt  vcpkg.json
Fallout 4/src/: CMakeLists.txt  PCH.h  main.cpp
Fallout 4/src/cog/: CacheFile.cpp  CacheFile.h  Generator.h  HashUtil.cpp  Settings.h
Fallout 4/src/fallout4/: EngineCalls.cpp  EngineCalls.h  EngineTypes.h  Fo4Generator.cpp  Fo4Generator.h  Patches.cpp  Patches.h
Skyrim/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
Skyrim/cmake/: plugin.cpp.in
Skyrim/src/: CellFindInFileFastTimer.cpp  CellFindInFileFastTimer.h  CellLoadTimer.cpp  CellLoadTimer.h  EngineCalls.cpp  EngineCalls.h  EngineTypes.h  FindCellInFileTimer.cpp  FindCellInFileTimer.h  PCH.h  Patches.cpp  Patches.h  PhaseTimer.cpp  PhaseTimer.h  Settings.cpp  Settings.h  SkyrimGenerator.cpp  SkyrimGenerator.h  main.cpp
Skyrim/src/cog/: CacheFile.cpp  CacheFile.h  Generator.h  HashUtil.h  Settings.cpp  Settings.h
Skyrim/src/skyrim/: Benchmark.cpp  Benchmark.h  EngineCalls.cpp  EngineCalls.h  EngineTypes.h  FindCellInFileTimer.cpp  FindCellInFileTimer.h  GenerationLog.cpp  GenerationLog.h  GetExtCellDataTest.cpp  GetExtCellDataTest.h  InteriorHooks.cpp  InteriorHooks.h  InteriorOffsets.cpp  InteriorOffsets.h  InteriorValidator.cpp  InteriorValidator.h  Patches.cpp  Patches.h  PhaseTimer.cpp  PhaseTimer.h  PluginScanner.h  SkyrimGenerator.cpp  SkyrimGenerator.h  Validator.cpp  Validator.h
